# cintel-05-drift-detection

./: CITATION.cff  README.md  pyproject.toml  zensical.toml
artifacts/: drift_summary_brandon.csv  drift_summary_long_brandon.csv
docs/: index.md  project-instructions.md  project-overview.md  results.md
src/cintel/: brandon_drift_detector.py
