# ============================================================
# pyproject.toml (Python project configuration)
# ============================================================
# REQ.PYTHON: Python projects MUST include pyproject.toml as the single source of truth.
# WHY: Centralizes project configuration.

[project]
name = "cintel"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

dependencies = [
    "datafun-toolkit",
    "polars[rtcompat]",
]

[project.optional-dependencies]
dev = [
    "packaging",
    "pre-commit",
    "ruff",
    "validate-pyproject",
]

docs = [
    "mkdocstrings[python]",
    "zensical",
]
